[package]
name = "enseal"
version = "0.0.1"
edition = "2021"
description = "Secure, ephemeral secret sharing for developers"
license = "MIT"
repository = "https://github.com/FlerAlex/enseal"
keywords = ["env", "secrets", "security", "dotenv", "wormhole"]
categories = ["command-line-utilities", "cryptography"]

[features]
default = ["client", "server"]
client = []
server = ["dep:axum", "dep:tower", "dep:tower-http", "dep:uuid"]

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# .env handling
dotenvy = "0.15"

# Terminal UI
indicatif = "0.17"
console = "0.15"
dialoguer = "0.11"

# Config & serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Misc
regex = "1"
directories = "5"
is-terminal = "0.4"
arboard = "3"

# Crypto
age = { version = "0.11", features = ["armor"] }
ed25519-dalek = { version = "2", features = ["rand_core", "pem"] }
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
hex = "0.4"

# Transfer (v0.1: anonymous wormhole mode)
magic-wormhole = "0.7"

# Transfer (v0.3: self-hosted relay)
tokio-tungstenite = "0.24"
futures-util = "0.3"

# Server (v0.3: self-hosted relay, optional)
axum = { version = "0.7", features = ["ws"], optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors", "trace"], optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

# Signal handling (inject command)
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
